<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_title"
            tools:text="Chappie"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/screen_background_light"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Release date"
            tools:text="2015"
            style="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintLeft_toRightOf="@+id/movie_poster"
            android:layout_marginLeft="35dp"
            app:layout_constraintTop_toTopOf="@+id/movie_poster"
            android:layout_marginStart="35dp" />

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_rating"
            tools:text="8.1/10"
            style="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_date"
            app:layout_constraintLeft_toRightOf="@+id/movie_poster"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp" />

        <Button
            android:id="@+id/movie_fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_fav_btn"
            tools:text="Add Favorite"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating"
            app:layout_constraintLeft_toRightOf="@+id/movie_poster"
            android:layout_marginLeft="35dp"
            android:onClick="addToFav"
            android:layout_marginStart="35dp" />

        <Button
            android:id="@+id/movie_un_fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_remove_fav_btn"
            tools:text="Remove Favorite"
            android:visibility="invisible"
            android:textColor="#B71C1C"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating"
            app:layout_constraintLeft_toRightOf="@+id/movie_poster"
            android:layout_marginLeft="35dp"
            android:onClick="removeFromFav"
            android:layout_marginStart="35dp" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_overview"
            tools:text="Every child comes in this world full of promises and none more so than Chappie."
            style="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"
            android:layout_marginLeft="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="4dp"
            android:layout_marginTop="28dp" />

        <View
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/view" />

        <TextView
            android:id="@+id/movie_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_trailer_title"
            tools:text="Trailers:"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginLeft="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="25dp" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="432dp"
            android:layout_height="43dp"
            app:srcCompat="@drawable/art_play"
            android:background="#ffff"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_trailer"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="playTrailer1"/>

        <TextView
            android:id="@+id/movie_trailer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_trailer_1"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:textStyle="normal"
            app:layout_constraintTop_toTopOf="@+id/imageButton1"
            android:layout_marginTop="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton1"
            android:layout_marginBottom="9dp"
            android:layout_marginLeft="82dp"
            app:layout_constraintLeft_toLeftOf="@+id/imageButton1"
            app:layout_constraintVertical_bias="0.666"
            android:layout_marginStart="82dp" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="432dp"
            android:layout_height="43dp"
            app:srcCompat="@drawable/art_play"
            android:background="#ffff"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton1"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="playTrailer2"/>

        <TextView
            android:id="@+id/movie_trailer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_trailer_2"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:textStyle="normal"
            app:layout_constraintTop_toTopOf="@+id/imageButton2"
            android:layout_marginTop="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            android:layout_marginBottom="9dp"
            android:layout_marginLeft="82dp"
            app:layout_constraintLeft_toLeftOf="@+id/imageButton2"
            app:layout_constraintVertical_bias="0.666"
            android:layout_marginStart="82dp" />

        <View
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/view2" />

        <TextView
            android:id="@+id/movie_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_review_title"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            android:layout_marginLeft="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="25dp"/>

        <!-- I do apologise setting the height this way, but it was the
             only work-through i could find that worked so that on rotation the scroll
             position remained intact. Guess recyclerView inside scrollView might not be
             a good idea -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_reviews"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:background="@color/colorPrimaryLight"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_reviews"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

</ScrollView>


